[gd_scene load_steps=10 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Graphics/Titles/IMG_0008.jpeg" type="Texture" id=2]
[ext_resource path="res://Scenes/Options.tscn" type="PackedScene" id=3]
[ext_resource path="res://Audio/BGM/main_menu.ogg" type="AudioStream" id=4]
[ext_resource path="res://Fonts/Ubuntu-L.tres" type="DynamicFont" id=5]
[ext_resource path="res://Scenes/CharacterSelectMenu.tscn" type="PackedScene" id=6]
[ext_resource path="res://themes/rpgm_like/rpgm_like.tres" type="Theme" id=7]

[sub_resource type="Animation" id=1]
resource_name = "bg"
length = 100.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IMG_0008:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 50, 100 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -850 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "end_transition"
length = 1.5

[node name="Menu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.41418
margin_top = -4.24265
margin_right = 1.41418
margin_bottom = -4.24268
theme = ExtResource( 7 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IMG_0008" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.205
margin_bottom = 844.36
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 225.0
margin_bottom = 135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Las" type="Button" parent="VBoxContainer"]
margin_right = 225.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "ZACZAROWANY LAS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Website" type="Button" parent="VBoxContainer"]
margin_top = 69.0
margin_right = 225.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Strona Projektu"

[node name="VBoxContainer2" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -225.0
margin_top = -135.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="VBoxContainer2"]
margin_right = 225.0
margin_bottom = 65.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Opcje"

[node name="Quit" type="Button" parent="VBoxContainer2"]
margin_top = 69.0
margin_right = 225.0
margin_bottom = 135.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 5 )
text = "Wyj≈õcie"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 2
autoplay = "bg"
anims/bg = SubResource( 1 )
anims/end_transition = SubResource( 2 )

[node name="Control" parent="." instance=ExtResource( 3 )]
margin_top = 124.0
margin_right = -216.0

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
autoplay = true
bus = "Music"

[node name="CharacterSelect" type="WindowDialog" parent="."]
visible = true
margin_left = 280.0
margin_top = 206.0
margin_right = 681.0
margin_bottom = 495.0

[node name="Control" parent="CharacterSelect" instance=ExtResource( 6 )]
[connection signal="pressed" from="VBoxContainer/Las" to="." method="_on_World1_pressed"]
[connection signal="pressed" from="VBoxContainer/Website" to="." method="_on_Website_pressed"]
[connection signal="pressed" from="VBoxContainer2/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer2/Quit" to="." method="_on_Quit_pressed"]
